syntax = "proto3";

package ticketbuster.inventory;

import "common.proto";

// ================================================
// Inventory Service
// Manages seat inventory and availability
// Used by Order Worker to commit purchases
// ================================================

service InventoryService {
  // Commit a seat purchase after successful payment
  // Called by Order Worker (Python) -> Catalog Service (Node.js)
  rpc CommitSeat (CommitSeatRequest) returns (CommitSeatResponse);
  
  // Get seat details for validation and pricing
  // Used before processing payment
  rpc GetSeatDetails (GetSeatDetailsRequest) returns (GetSeatDetailsResponse);
  
  // Lock a seat temporarily during checkout process
  // Prevents double-booking during payment processing
  rpc LockSeat (LockSeatRequest) returns (LockSeatResponse);
  
  // Release a locked seat if payment fails or times out
  rpc ReleaseSeat (ReleaseSeatRequest) returns (ReleaseSeatResponse);
  
  // Batch operation: Get multiple seats details at once
  rpc GetMultipleSeatsDetails (GetMultipleSeatsRequest) returns (GetMultipleSeatsResponse);
}

// ================================================
// CommitSeat Messages
// ================================================

message CommitSeatRequest {
  int32 seat_id = 1;           // Seat ID to mark as sold
  string user_id = 2;          // UUID of the user purchasing (from Keycloak)
  string order_uuid = 3;       // Order UUID for traceability
  double amount_paid = 4;      // Amount paid (for validation)
}

message CommitSeatResponse {
  bool success = 1;            // Whether the commit was successful
  string message = 2;          // Human-readable message
  SeatStatus seat_status = 3;  // Current seat status after operation
  ticketbuster.common.Timestamp committed_at = 4;
}

// ================================================
// GetSeatDetails Messages
// ================================================

message GetSeatDetailsRequest {
  int32 seat_id = 1;
}

message GetSeatDetailsResponse {
  bool success = 1;
  string message = 2;
  SeatDetails details = 3;
}

message SeatDetails {
  int32 seat_id = 1;
  int32 event_id = 2;
  string seat_number = 3;
  double price = 4;
  bool is_available = 5;
  SeatStatus status = 6;
  string locked_by_user_id = 7;  // Empty if not locked
  ticketbuster.common.Timestamp locked_at = 8;
}

// ================================================
// LockSeat Messages
// ================================================

message LockSeatRequest {
  int32 seat_id = 1;
  string user_id = 2;          // UUID of user locking the seat
  int32 lock_duration_seconds = 3;  // How long to lock (default: 600 = 10 min)
}

message LockSeatResponse {
  bool success = 1;
  string message = 2;
  ticketbuster.common.Timestamp locked_until = 3;
  string lock_token = 4;       // Token to verify lock ownership
}

// ================================================
// ReleaseSeat Messages
// ================================================

message ReleaseSeatRequest {
  int32 seat_id = 1;
  string user_id = 2;          // Must match the user who locked it
  string lock_token = 3;       // Must match the lock token
}

message ReleaseSeatResponse {
  bool success = 1;
  string message = 2;
}

// ================================================
// Batch Operations
// ================================================

message GetMultipleSeatsRequest {
  repeated int32 seat_ids = 1;
}

message GetMultipleSeatsResponse {
  repeated SeatDetails seats = 1;
  int32 total_found = 2;
  repeated int32 not_found_ids = 3;
}

// ================================================
// Enums
// ================================================

enum SeatStatus {
  SEAT_STATUS_UNSPECIFIED = 0;
  SEAT_STATUS_AVAILABLE = 1;
  SEAT_STATUS_LOCKED = 2;
  SEAT_STATUS_SOLD = 3;
}

// ================================================
// Error Codes (for standardized error handling)
// ================================================

enum InventoryErrorCode {
  INVENTORY_ERROR_NONE = 0;
  INVENTORY_ERROR_SEAT_NOT_FOUND = 1;
  INVENTORY_ERROR_SEAT_ALREADY_SOLD = 2;
  INVENTORY_ERROR_SEAT_LOCKED_BY_ANOTHER = 3;
  INVENTORY_ERROR_INVALID_LOCK_TOKEN = 4;
  INVENTORY_ERROR_LOCK_EXPIRED = 5;
  INVENTORY_ERROR_DATABASE_ERROR = 6;
  INVENTORY_ERROR_INVALID_REQUEST = 7;
}
